# gammapy-mwl

./: pyproject.toml  tox.ini
.github/workflows/: ci.yml
data/chandra/acis/: README.rst  circle30arcs.arf  circle30arcs.pi  circle30arcs.rmf  circle30arcs_bkg.pi
data/erosita/: README.rst  em01_072135_820_ARF_00001_c010.fits  em01_072135_820_BackgrSpec_00001_c010.fits  em01_072135_820_RMF_00001_c010.fits  em01_072135_820_SourceSpec_00001_c010.fits
gammapy_mwl/io/: ogip.py
gammapy_mwl/models/: sherpa.py
gammapy_mwl/models/tests/: test_models.py
