[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "gammapy_mwl"
description = "Tools to support using data products of various instruments in the gammapy modeling and fitting framework"
requires-python = ">=3.11"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
dependencies = [
    "gammapy>=1.3",
    "numpy"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-doctestplus",
    "pytest-cov",
    "pytest-xdist"
]
docs = [
    "sphinx",
    "sphinx-automodapi",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["gammapy_mwl*"]

[tool.setuptools_scm]
version_file = "gammapy_mwl/version.py"

[tool.pytest.ini_options]
testpaths = [
  "gammapy_mwl",
]
#doctest_plus = "enabled"
#text_file_format = "rst"
#addopts = "--doctest-rst"

[tool.coverage.run]
omit = [
 "gammapy_mwl/__init*",
 "gammapy_mwl/conftest.py",
 "gammapy_mwl/*setup_package*",
 "gammapy_mwl/tests/*",
 "gammapy_mwl/*/tests/*",
 "gammapy_mwl/extern/*",
 "gammapy_mwl/version*",
 "*/gammapy_mwl/__init*",
 "*/gammapy_mwl/conftest.py",
 "*/gammapy_mwl/*setup_package*",
 "*/gammapy_mwl/tests/*",
 "*/gammapy_mwl/*/tests/*",
 "*/gammapy_mwl/extern/*",
 "*/gammapy_mwl/version*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  "def main(.*):",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
  # typing.TYPE_CHECKING is False at runtime
  "if TYPE_CHECKING:",
  # Ignore typing overloads
  "@overload",
]
